--- a/main.ipynb
+++ b/main.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "948ade63",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "13c55fb3",
    "metadata": {},
    "outputs": [
@@ -222,13 +222,14 @@
       " 'Nebraska' 'New York' 'Maine' 'Alaska' 'Georgia' 'Indiana' 'Kentucky'\n",
       " 'North Dakota' 'Oklahoma' 'Wyoming' 'District of Columbia' 'Iowa'\n",
       " 'Alabama' 'South Dakota' 'Illinois' 'Colorado' 'Nevada' 'California'\n",
-      " 'Delaware']\n",
-      "2149\n"
+      " 'Delaware' 'United States, DC & Territories' 'Virgin Islands'\n",
+      " 'Puerto Rico' 'Guam' 'Florida']\n",
+      "250937\n"
      ]
     }
    ],
    "source": [
-    "df=pd.read_csv(\"Datos_G2.csv\")\n",
+    "df=pd.read_csv(\"Datos_Proyecto_Final.csv\")\n",
     "#df = df.dropna() -> si hacemos dropna, perdemos demasiados datos (quedamos solo con 1400 filas aprox)\n",
     "print(df[\"LocationDesc\"].unique())\n",
     "print(len(df))\n"
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4b7639df",
    "metadata": {},
    "outputs": [],
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1dc12b69",
    "metadata": {},
    "outputs": [
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3210d9bc",
    "metadata": {},
    "outputs": [
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f74fdee2",
    "metadata": {},
    "outputs": [
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b98e7c75",
    "metadata": {},
    "outputs": [
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c54ecf0d",
    "metadata": {},
    "outputs": [
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "91c8910a",
    "metadata": {},
    "outputs": [
@@ -740,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a0078033",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cf325762",
    "metadata": {},
    "outputs": [
@@ -1391,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "429d31db",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d0362f2a",
    "metadata": {},
    "outputs": [
@@ -1720,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ecb1b6a9",
    "metadata": {},
    "outputs": [],
@@ -1845,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cdff41df",
    "metadata": {},
    "outputs": [
@@ -6055,9 +6056,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da04923e",
+   "metadata": {},
+   "source": [
+    "Podemos afirmar que con un nivel de significancia del 0.05, nuestros datos obtenidos no fueron por azar\n",
+    "\n",
+    "(graficar los intervalos de confianza y ubicar el 0.7 que nos dió)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c3ff882",
+   "metadata": {},
+   "source": [
+    "### MANOVA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f07ad2b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import bootstrap\n",
+    "import pandas as pd\n",
+    "from statsmodels.multivariate.manova import MANOVA\n",
+    "\n",
+    "def bootstrap_manova_percentil_bca(\n",
+    "    df,\n",
+    "    dvs,                 # ['IL6_pg_ml','CRP_mg_L','TNFa_pg_ml']\n",
+    "    formula_rhs,         # 'C(sex)*C(disease_stage) + age_years + disease_duration_months'\n",
+    "    group_cols,          # ['sex','disease_stage']\n",
+    "    n_resamples=2000,\n",
+    "    method=\"BCa\",\n",
+    "    seed=0\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    MANOVA bootstrap estratificado por celdas remuestreando ÍNDICES de fila.\n",
+    "    Preserva DVs, factores y covariables completas en cada réplica.\n",
+    "    Devuelve p_boot para Pillai, Wilks, HL y Roy por término.\n",
+    "    \"\"\"\n",
+    "    if not isinstance(group_cols, (list, tuple)):\n",
+    "        group_cols = [group_cols]\n",
+    "    rng = np.random.default_rng(seed)\n",
+    "    test_order = ['Pillai', 'Wilks', 'Hotelling-Lawley', 'Roy']\n",
+    "\n",
+    "    # 1) Observados (tabla términos × tests)\n",
+    "    obs_df = manova_stats_todos(df, dvs=dvs, formula_rhs=formula_rhs)\n",
+    "    terms = obs_df.index.tolist()\n",
+    "    K = len(terms)\n",
+    "    stat_obs = {tname: obs_df[tname].to_dict() for tname in test_order}\n",
+    "\n",
+    "    # 2) ÍNDICES por celda\n",
+    "    cell_keys, cell_index_arrays = build_cell_index_samples(df, group_cols)\n",
+    "\n",
+    "    # 3) Función-estadístico: arma df_b con filas completas y calcula MANOVA (todos los tests)\n",
+    "    def stat_func(*boot_index_arrays):\n",
+    "        take = np.concatenate(boot_index_arrays, axis=0)\n",
+    "        df_b = df.loc[take]\n",
+    "        stats_b = manova_stats_todos(df_b, dvs=dvs, formula_rhs=formula_rhs)  # términos × tests\n",
+    "        # Vector concatenado en orden fijo por test y términos\n",
+    "        parts = [stats_b.reindex(index=terms)[col].fillna(0.0).to_numpy()\n",
+    "                 for col in test_order]\n",
+    "        return np.concatenate(parts, axis=0).astype(float)\n",
+    "\n",
+    "    # 4) SciPy bootstrap: permitir tamaños distintos entre celdas\n",
+    "    res = bootstrap(\n",
+    "        data=tuple(cell_index_arrays),  # tuple de arrays de ÍNDICES (uno por celda)\n",
+    "        statistic=stat_func,\n",
+    "        vectorized=False,\n",
+    "        paired=False,\n",
+    "        axis=0,\n",
+    "        n_resamples=n_resamples,\n",
+    "        method=method,\n",
+    "        random_state=rng\n",
+    "    )\n",
+    "\n",
+    "    # 5) Reorganizar distribución y calcular p_boot (colas correctas)\n",
+    "    mat = res.bootstrap_distribution  # (B × 4K)\n",
+    "    boot_dist = {\n",
+    "        'Pillai': {terms[i]: mat[:, i]           for i in range(0,      K)},\n",
+    "        'Wilks':  {terms[i]: mat[:, K + i]       for i in range(0,      K)},\n",
+    "        'HL':     {terms[i]: mat[:, 2*K + i]     for i in range(0,      K)},\n",
+    "        'Roy':    {terms[i]: mat[:, 3*K + i]     for i in range(0,      K)},\n",
+    "    }\n",
+    "    p_boot = {\n",
+    "        'Pillai': {t: np.mean(boot_dist['Pillai'][t] >= stat_obs['Pillai'][t]) for t in terms},\n",
+    "        'HL':     {t: np.mean(boot_dist['HL'][t]     >= stat_obs['Hotelling-Lawley'][t]) for t in terms},\n",
+    "        'Roy':    {t: np.mean(boot_dist['Roy'][t]    >= stat_obs['Roy'][t]) for t in terms},\n",
+    "        'Wilks':  {t: np.mean(boot_dist['Wilks'][t]  <= stat_obs['Wilks'][t]) for t in terms},\n",
+    "    }\n",
+    "\n",
+    "    return terms, stat_obs, p_boot, boot_dist, res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "630fa665",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'manova_stats_todos' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# MANOVA\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m terms, stat_obs, pB_manova, boot_distM, resM = \u001b[43mbootstrap_manova_percentil_bca\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdvs\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mGholesterolLDL\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mformula_rhs\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mC(LocationDesc)\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgroup_cols\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mLocationDesc\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m    \u001b[49m\u001b[43mn_resamples\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1500\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmethod\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mBCa\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43mseed\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m7\u001b[39;49m\n\u001b[32m     10\u001b[39m \u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 26\u001b[39m, in \u001b[36mbootstrap_manova_percentil_bca\u001b[39m\u001b[34m(df, dvs, formula_rhs, group_cols, n_resamples, method, seed)\u001b[39m\n\u001b[32m     23\u001b[39m test_order = [\u001b[33m'\u001b[39m\u001b[33mPillai\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mWilks\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mHotelling-Lawley\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mRoy\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# 1) Observados (tabla términos × tests)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m obs_df = \u001b[43mmanova_stats_todos\u001b[49m(df, dvs=dvs, formula_rhs=formula_rhs)\n\u001b[32m     27\u001b[39m terms = obs_df.index.tolist()\n\u001b[32m     28\u001b[39m K = \u001b[38;5;28mlen\u001b[39m(terms)\n",
+      "\u001b[31mNameError\u001b[39m: name 'manova_stats_todos' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# MANOVA\n",
+    "terms, stat_obs, pB_manova, boot_distM, resM = bootstrap_manova_percentil_bca(\n",
+    "    df=df,\n",
+    "    dvs=['GholesterolLDL'],\n",
+    "    formula_rhs='C(LocationDesc)',\n",
+    "    group_cols=['LocationDesc'],\n",
+    "    n_resamples=1500,\n",
+    "    method=\"BCa\",\n",
+    "    seed=7\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f07ad2b9",
+   "id": "09c5622c",
    "metadata": {},
    "outputs": [],
    "source": []
