--- a/final_code.ipynb
+++ b/final_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b07382fa",
    "metadata": {},
    "outputs": [],
@@ -46,10 +46,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3e43416e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18624\\3643071408.py:8: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
+      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
+      "\n",
+      "df[\"col\"][row_indexer] = value\n",
+      "\n",
+      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "  df[\"Age\"][pos] = \"70-79\"\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18624\\3643071408.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"Age\"][pos] = \"70-79\"\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18624\\3643071408.py:8: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '70-79' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  df[\"Age\"][pos] = \"70-79\"\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18624\\3643071408.py:22: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
+      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
+      "\n",
+      "df[\"col\"][row_indexer] = value\n",
+      "\n",
+      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "  df[\"MMSE\"][pos] = \"Deterioro leve\"\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18624\\3643071408.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"MMSE\"][pos] = \"Deterioro leve\"\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18624\\3643071408.py:22: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'Deterioro leve' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df[\"MMSE\"][pos] = \"Deterioro leve\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age\n",
+      "80-90    88980\n",
+      "70-79    81101\n",
+      "60-69    80856\n",
+      "Name: count, dtype: int64\n",
+      "MMSE\n",
+      "Deterioro leve        125082\n",
+      "Demencia severa        50317\n",
+      "Deterioro moderado     33688\n",
+      "Sin deterioro          25041\n",
+      "Posible deterioro      16809\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_18624\\3643071408.py:38: DeprecationWarning: support for supplying keyword arguments to pathlib.PurePath is deprecated and scheduled for removal in Python 3.14\n",
+      "  df.to_csv(Path(\"Base_plena.csv\", index=False))\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"Dataset_G2.csv\")\n",
     "pos = 0\n",
@@ -88,13 +157,35 @@
     "#print(len(df))\n",
     "#print(df[\"Age\"].value_counts())\n",
     "#print(df[\"MMSE\"].value_counts())\n",
-    "df.to_csv(Path(\"Datos_Proyecto_Final.csv\", index=False))"
+    "df.to_csv(Path(\"Base_plena.csv\", index=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ddf2bed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
