--- a/Martin.ipynb
+++ b/Martin.ipynb
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cf325762",
    "metadata": {},
    "outputs": [
@@ -1313,6 +1313,7 @@
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
     "from sklearn.decomposition import PCA \n",
+    "from sklearn.decomposition import FAMD\n",
     "from sklearn.preprocessing import StandardScaler \n",
     "from sklearn.datasets import load_breast_cancer \n",
     "\n",
