--- a/final_code.ipynb
+++ b/final_code.ipynb
@@ -2680,6 +2680,63 @@
    "execution_count": null,
    "id": "ca586ece",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: np.float64(130.11821455380118), 1: np.float64(179.6634179832143), 2: np.float64(75.38876889344687)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ========== DICCIONARIO: ESTADO → CLUSTER DOMINANTE ==========\n",
+    "\n",
+    "# Nombres de clusters\n",
+    "cluster_names = {\n",
+    "    0: \"Intermedios\",\n",
+    "    1: \"Enfermos\",\n",
+    "    2: \"Sanos\"\n",
+    "}\n",
+    "\n",
+    "# Crear tabla de contingencia: Estados x Clusters\n",
+    "contingency_estados = pd.crosstab(df_famd_clusters[\"State\"], df_famd_clusters[\"Cluster_FAMD\"])\n",
+    "print(\"Tabla de contingencia (Estados x Clusters):\")\n",
+    "print(contingency_estados)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Para cada estado, determinar el cluster con mayor cantidad de observaciones\n",
+    "estado_a_cluster = {}\n",
+    "\n",
+    "for estado in contingency_estados.index:\n",
+    "    # Obtener el número del cluster con más observaciones para este estado\n",
+    "    cluster_dominante_num = contingency_estados.loc[estado].idxmax()\n",
+    "    \n",
+    "    # Convertir el número a nombre\n",
+    "    cluster_dominante_nombre = cluster_names[cluster_dominante_num]\n",
+    "    \n",
+    "    # Guardar en el diccionario\n",
+    "    estado_a_cluster[estado] = cluster_dominante_nombre\n",
+    "\n",
+    "# Mostrar el diccionario\n",
+    "print(\"Diccionario Estado → Cluster Dominante:\")\n",
+    "print(\"=\"*50)\n",
+    "for estado, cluster in sorted(estado_a_cluster.items()):\n",
+    "    count = contingency_estados.loc[estado, list(cluster_names.keys())].max()\n",
+    "    total = contingency_estados.loc[estado].sum()\n",
+    "    porcentaje = (count / total) * 100\n",
+    "    print(f\"{estado:30} → {cluster:15} ({count}/{total} = {porcentaje:.1f}%)\")\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"Diccionario completo:\")\n",
+    "print(estado_a_cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "589fd031",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
